--- a/VmfCat/VmfCat/VmfCat.csproj
+++ b/VmfCat/VmfCat/VmfCat.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Plane.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vector3.cs" />
   </ItemGroup>
