--- a/VmfCat/VmfCat/VmfCat.csproj
+++ b/VmfCat/VmfCat/VmfCat.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Plane.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Side.cs" />
     <Compile Include="Vector3.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
