Test project now references main project

--- a/VmfCat/VmfCat.UnitTests/VmfCat.UnitTests.csproj
+++ b/VmfCat/VmfCat.UnitTests/VmfCat.UnitTests.csproj
@@ -65,6 +65,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\VmfCat\VmfCat.csproj">
+      <Project>{4a6bf5ba-ccb0-46de-a817-36e56163332c}</Project>
+      <Name>VmfCat</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
