--- a/VmfCat/VmfCat/VmfCat.csproj
+++ b/VmfCat/VmfCat/VmfCat.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Side.cs" />
     <Compile Include="Solid.cs" />
     <Compile Include="Vector3.cs" />
+    <Compile Include="VersionInfo.cs" />
     <Compile Include="VmfWriter.cs" />
     <Compile Include="World.cs" />
   </ItemGroup>
