--- a/VmfCat/VmfCat/VmfCat.csproj
+++ b/VmfCat/VmfCat/VmfCat.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Plane.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Side.cs" />
+    <Compile Include="SideFactory.cs" />
     <Compile Include="Solid.cs" />
     <Compile Include="Vector3.cs" />
     <Compile Include="VersionInfo.cs" />
