--- a/VmfCat/VmfCat/VmfCat.csproj
+++ b/VmfCat/VmfCat/VmfCat.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="IWriter.cs" />
     <Compile Include="Plane.cs" />
+    <Compile Include="PlaneExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Side.cs" />
     <Compile Include="SideFactory.cs" />
