--- a/VmfCat/VmfCat/VmfCat.csproj
+++ b/VmfCat/VmfCat/VmfCat.csproj
@@ -49,6 +49,7 @@
     <Compile Include="SideFactory.cs" />
     <Compile Include="Solid.cs" />
     <Compile Include="SolidExtensions.cs" />
+    <Compile Include="SolidFactory.cs" />
     <Compile Include="Vector3.cs" />
     <Compile Include="VersionInfo.cs" />
     <Compile Include="VmfWriter.cs" />
