--- a/VmfCat/VmfCat/VmfCat.csproj
+++ b/VmfCat/VmfCat/VmfCat.csproj
@@ -51,6 +51,7 @@
     <Compile Include="SolidExtensions.cs" />
     <Compile Include="SolidFactory.cs" />
     <Compile Include="Vector3.cs" />
+    <Compile Include="Vector3Extensions.cs" />
     <Compile Include="VersionInfo.cs" />
     <Compile Include="VmfWriter.cs" />
     <Compile Include="World.cs" />
